--- a/index.html
+++ b/index.html
@@ -1,396 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>HTML Engine Index</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>NA Plugin Generator</title>
 <style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{font-family:'Roboto',sans-serif;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);min-height:100vh;padding:16px;color:#333}
-.container{max-height:calc(100vh - 32px);background:#fff;border-radius:12px;box-shadow:0 8px 32px rgba(0,0,0,.2);overflow:hidden;display:flex;flex-direction:column}
-.header{background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:#fff;padding:20px;box-shadow:0 2px 8px rgba(0,0,0,.1);position:sticky;top:0;z-index:100}
-.header h1{font-size:24px;margin-bottom:12px;font-weight:500}
-.controls{display:flex;flex-direction:column;gap:8px}
-.input-group{display:flex;gap:8px}
-.input-group input{flex:1;padding:10px;border:none;border-radius:6px;font-size:14px;background:rgba(255,255,255,.9)}
-.btn{padding:10px 16px;border:none;border-radius:6px;font-size:14px;font-weight:500;cursor:pointer;transition:all .2s;text-align:center;white-space:nowrap}
-.btn-primary{background:#fff;color:#667eea}
-.btn-primary:active{transform:scale(.95);background:#f0f0f0}
-.btn-secondary{background:rgba(255,255,255,.2);color:#fff;border:1px solid rgba(255,255,255,.3)}
-.btn-secondary:active{background:rgba(255,255,255,.3)}
-.btn-github{background:#24292e;color:#fff;border:none}
-.btn-github:active{background:#1a1e22}
-.status{margin-top:8px;padding:8px;background:rgba(255,255,255,.15);border-radius:6px;font-size:13px;min-height:36px;display:flex;align-items:center}
-.content{flex:1;overflow-y:auto;padding:20px}
-.list-item{background:#f5f5f5;padding:14px;margin-bottom:10px;border-radius:8px;cursor:pointer;transition:all .2s;display:flex;align-items:center;gap:12px;box-shadow:0 2px 4px rgba(0,0,0,.05)}
-.list-item:active{transform:scale(.98);background:#e0e0e0}
-.list-item-icon{width:40px;height:40px;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);border-radius:8px;display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;font-size:18px;flex-shrink:0}
-.list-item-text{flex:1;overflow:hidden}
-.list-item-title{font-weight:500;color:#333;font-size:15px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-.list-item-path{font-size:12px;color:#666;margin-top:4px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
-.empty{text-align:center;padding:40px;color:#999;font-size:14px}
-.loading{display:none;justify-content:center;padding:40px}
-.spinner{width:40px;height:40px;border:4px solid #f3f3f3;border-top:4px solid #667eea;border-radius:50%;animation:spin 1s linear infinite}
-@keyframes spin{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
-.error{color:#ff6b6b;background:rgba(255,107,107,.1);padding:12px;border-radius:6px;margin:10px 0;font-size:13px}
-.modal{display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,.5);align-items:center;justify-content:center}
-.modal-content{background:#fff;border-radius:12px;padding:24px;max-width:500px;margin:16px;max-height:80vh;overflow-y:auto;box-shadow:0 8px 32px rgba(0,0,0,.3)}
-.modal-header{font-size:20px;font-weight:700;margin-bottom:16px;color:#667eea}
-.modal-section{margin-bottom:16px;padding-bottom:16px;border-bottom:1px solid #eee}
-.modal-section:last-child{border-bottom:none}
-.modal-section h3{font-size:15px;font-weight:700;color:#333;margin-bottom:8px}
-.modal-section p{font-size:14px;color:#666;line-height:1.6;margin-bottom:8px}
-.modal-section code{background:#f5f5f5;padding:2px 6px;border-radius:4px;font-family:monospace;font-size:13px;color:#667eea}
-.modal-close{background:#667eea;color:#fff;border:none;padding:10px 20px;border-radius:6px;font-size:14px;font-weight:500;cursor:pointer;width:100%;margin-top:8px}
-.modal-close:active{transform:scale(.95)}
-.fab-container{position:fixed;bottom:20px;right:20px;display:flex;flex-direction:column;gap:12px;z-index:99}
-.fab{width:56px;height:56px;border-radius:50%;background:linear-gradient(135deg,#667eea 0%,#764ba2 100%);color:#fff;border:none;font-size:24px;box-shadow:0 4px 12px rgba(0,0,0,.3);cursor:pointer;display:flex;align-items:center;justify-content:center;transition:all .2s}
-.fab:active{transform:scale(.9)}
-.fab.secondary{background:#24292e;font-size:20px}
+body{font-family:Arial;padding:10px;background:#111;color:#eee}
+input,textarea{width:100%;padding:6px;margin:6px 0;background:#222;color:#eee;border:1px solid #444}
+button{padding:8px 12px;background:#444;color:#fff;border:0;margin:6px 4px 6px 0}
+.box{border:1px solid #333;padding:10px;margin:10px 0;background:#181818}
 </style>
 </head>
 <body>
-<div class="container">
-<div class="header">
-<h1>🗂️ HTML Engine Index <span id="debugBadge" style="display:none;background:#ff9800;color:#fff;font-size:11px;padding:4px 8px;border-radius:4px;font-weight:700;margin-left:8px">DEBUG</span></h1>
-<div class="controls">
-<div class="input-group">
-<input type="text" id="repoInput" placeholder="owner/repo or leave empty for auto-detect">
-<button class="btn btn-primary" onclick="scan()">Scan</button>
-</div>
-<div class="input-group">
-<input type="text" id="baseUrlInput" placeholder="Optional: Custom base URL (e.g., https://mysite.com)">
-</div>
-<div class="input-group">
-<button class="btn btn-secondary" onclick="autoDetect()">Auto Detect</button>
-<button class="btn btn-secondary" onclick="refresh()">Refresh</button>
-<button class="btn btn-secondary" onclick="clearData()">Clear</button>
-<button class="btn btn-secondary" onclick="showHelp()">ℹ️ Help</button>
-</div>
-<div class="input-group">
-<button class="btn btn-github" id="repoLink" onclick="openRepo()" style="display:none">🔗 Open on GitHub</button>
-</div>
-<div class="status" id="status">Ready to scan • Detects from current URL or manual input</div>
-</div>
-</div>
-<div class="content" id="content">
-<div class="loading" id="loading"><div class="spinner"></div></div>
-<div class="empty" id="empty">Enter a GitHub repo or use auto-detect to start</div>
-<div id="list"></div>
-</div>
-</div>
 
-<div class="fab-container">
-<button class="fab secondary" onclick="showHelp()" title="Help">ℹ️</button>
-<button class="fab" onclick="scrollToTop()" title="Scroll to top">↑</button>
-</div>
+<h2>NA Plugin Generator (Simple)</h2>
 
-<div class="modal" id="helpModal" onclick="if(event.target===this)closeHelp()">
-<div class="modal-content">
-<div class="modal-header">📖 How to Use</div>
+<div id="cmdContainer"></div>
+<button onclick="addCommandBlock()">Add Command</button>
 
-<div class="modal-section">
-<h3>Auto-Detect Mode</h3>
-<p>If this HTML is served on GitHub Pages, click <code>Auto Detect</code> to automatically find the repository and scan it.</p>
-<p>Example: Served at <code>user.github.io/repo/</code> → Auto-detects <code>user/repo</code></p>
-</div>
+<h3>Output</h3>
+<textarea id="output" rows="15" readonly></textarea><br>
 
-<div class="modal-section">
-<h3>Manual Repo Input</h3>
-<p>Enter the GitHub repository in <code>owner/repo</code> format:</p>
-<p><code>octocat/Hello-World</code></p>
-<p>The engine will scan <code>github.com</code> and list all HTML files found in that repository.</p>
-</div>
-
-<div class="modal-section">
-<h3>Custom Base URL (Advanced)</h3>
-<p>If your HTML files are served from a custom domain or different path structure, enter the base URL:</p>
-<p><code>https://mycustomdomain.com</code></p>
-<p><code>https://subdomain.site.io/path</code></p>
-<p>The engine will generate URLs as: <code>base-url/path/file.html</code></p>
-<p><strong>When to use:</strong> When files are deployed to custom domains, CDNs, or alternative hosting with different URL patterns than standard GitHub Pages.</p>
-</div>
-
-<div class="modal-section">
-<h3>Features</h3>
-<p>• Scans GitHub repositories recursively for all HTML files</p>
-<p>• Caches results in localStorage for quick reload</p>
-<p>• Works in debug mode on localhost for testing</p>
-<p>• Generates proper URLs for deployed pages</p>
-<p>• Click any file to open in new tab</p>
-</div>
-
-<button class="modal-close" onclick="closeHelp()">Got it!</button>
-</div>
-</div>
+<button onclick="copyOutput()">Copy</button>
+<button onclick="downloadFile()">Download .na</button>
 
 <script>
-const $=(id)=>document.getElementById(id);
-const LS_KEY='engine_index_data';
-const LS_REPO='engine_index_repo';
-const LS_BASE='engine_index_base';
-let currentRepo='';
+function addCommandBlock(){
+    const box=document.createElement("div");
+    box.className="box";
+    box.innerHTML=`
+        <b>Command + Aliases (one per line, no spaces):</b>
+        <textarea class="aliases" rows="3" placeholder="cmd1\nalias1\nalias2"></textarea>
 
-// Show/hide help modal
-function showHelp(){
-$('helpModal').style.display='flex';
-}
-function closeHelp(){
-$('helpModal').style.display='none';
-}
+        <b>Info:</b>
+        <input class="info" placeholder="description">
 
-// Scroll to top
-function scrollToTop(){
-$('content').scrollTo({top:0,behavior:'smooth'});
-}
+        <b>Place IDs (pid1, pid2, pid3...):</b>
+        <input class="pids" placeholder="123456, 98765">
 
-// Open GitHub repo
-function openRepo(){
-if(currentRepo){
-window.open(`https://github.com/${currentRepo}`,'_blank');
-}
+        <b>Run Commands (one per line):</b>
+        <textarea class="runcmd" rows="4" placeholder="fly 50\nfullbright"></textarea>
+
+        <button onclick="generate()">Update Output</button>
+    `;
+    document.getElementById("cmdContainer").appendChild(box);
 }
 
-// Auto-detect current repo from URL
-function autoDetect(){
-const hostname=window.location.hostname;
-const pathname=window.location.pathname;
-const protocol=window.location.protocol;
-
-// Check for debug mode (localhost/IP)
-const isDebug=hostname==='localhost'||hostname==='127.0.0.1'||/^\d+\.\d+\.\d+\.\d+$/.test(hostname)||hostname.startsWith('192.168.')||hostname.startsWith('10.');
-if(isDebug){
-showDebugMode();
-return;
+function sanitizeAliases(lines){
+    return lines.filter(x=>{
+        return x.length>0 && /^[A-Za-z0-9_]+$/.test(x)
+    });
 }
 
-// Pattern: username.github.io/repo-name/...
-const pattern=hostname.match(/^([^.]+)\.github\.io$/);
-if(pattern){
-const user=pattern[1];
-const pathParts=pathname.split('/').filter(p=>p);
-const repo=pathParts[0]||user;
-$('repoInput').value=`${user}/${repo}`;
-const baseUrl=pathParts.length>0&&pathParts[0]===repo?`https://${hostname}/${repo}`:`https://${hostname}`;
-localStorage.setItem(LS_BASE,baseUrl);
-setStatus(`Auto-detected from URL → Will scan github.com/${user}/${repo}`,'success');
-scan();
-return;
+function generate(){
+    const blocks=[];
+    const boxes=document.querySelectorAll(".box");
+
+    boxes.forEach(box=>{
+        const aliases=sanitizeAliases(
+            box.querySelector(".aliases").value.split("\n").map(x=>x.trim())
+        );
+        if(aliases.length===0) return;
+
+        const info=box.querySelector(".info").value.trim();
+        const pidraw=box.querySelector(".pids").value.trim();
+
+        // place id logic
+        let pidcode="";
+        if(pidraw.length>0){
+            const nums=pidraw.split(",").map(x=>x.trim()).filter(x=>/^\d+$/.test(x));
+            if(nums.length>0){
+                pidcode=`local allowed={${nums.join(",")}}
+            if not table.find(allowed,game.PlaceId) then return end
+            `;
+            }
+        }
+
+        // runcommand lines
+        const runcmdLines=box.querySelector(".runcmd").value.split("\n").map(x=>x.trim()).filter(x=>x.length>0);
+        let exec="";
+        runcmdLines.forEach(line=>{
+            exec+=`runCommand("${line}")\n            `;
+        });
+
+        const block=`{
+        Aliases = {${aliases.map(x=>`"${x}"`).join(",")}},
+        Info = "${info}",
+        Function = function()
+            ${pidcode}${exec}
+        end,
+        RequiresArguments = false
+    }`;
+
+        blocks.push(block);
+    });
+
+    document.getElementById("output").value =
+`cmdPluginAdd = {
+${blocks.join(",\n")}
+}`;
 }
 
-setStatus(`Not a GitHub Pages URL • Enter repo manually`,'error');
+function copyOutput(){
+    const o=document.getElementById("output");
+    o.select();
+    document.execCommand("copy");
 }
 
-// Show debug mode info
-function showDebugMode(){
-$('debugBadge').style.display='inline-block';
-const info={
-protocol:window.location.protocol,
-hostname:window.location.hostname,
-port:window.location.port,
-pathname:window.location.pathname,
-href:window.location.href,
-userAgent:navigator.userAgent.substring(0,50)+'...',
-viewport:`${window.innerWidth}x${window.innerHeight}`,
-storage:typeof(Storage)!=='undefined'?'✓ Available':'✗ Not Available',
-localStorage:Object.keys(localStorage).length+' items'
-};
+// download file
+function downloadFile(){
+    const content=document.getElementById("output").value;
+    const blob=new Blob([content],{type:"text/plain"});
+    const a=document.createElement("a");
 
-$('empty').style.display='none';
-$('list').innerHTML='';
-
-const debugDiv=document.createElement('div');
-debugDiv.style.cssText='background:#f8f9fa;padding:20px;border-radius:8px;font-family:monospace;font-size:13px;line-height:1.8';
-debugDiv.innerHTML=`
-<div style="background:#24292e;color:#fff;padding:12px;border-radius:6px;margin-bottom:16px;font-weight:700;text-align:center">
-🔧 DEBUG MODE ACTIVE
-</div>
-<div style="background:#fff;padding:16px;border-radius:6px;margin-bottom:12px">
-<div style="color:#666;margin-bottom:8px;font-weight:700">LOCATION INFO:</div>
-<div>Protocol: <span style="color:#667eea;font-weight:700">${info.protocol}</span></div>
-<div>Hostname: <span style="color:#667eea;font-weight:700">${info.hostname}</span></div>
-<div>Port: <span style="color:#667eea;font-weight:700">${info.port||'(default)'}</span></div>
-<div>Path: <span style="color:#667eea;font-weight:700">${info.pathname}</span></div>
-<div style="margin-top:8px;word-break:break-all;color:#999">${info.href}</div>
-</div>
-<div style="background:#fff;padding:16px;border-radius:6px;margin-bottom:12px">
-<div style="color:#666;margin-bottom:8px;font-weight:700">ENVIRONMENT:</div>
-<div>Viewport: <span style="color:#667eea;font-weight:700">${info.viewport}</span></div>
-<div>Local Storage: <span style="color:#667eea;font-weight:700">${info.storage}</span></div>
-<div>Cached Data: <span style="color:#667eea;font-weight:700">${info.localStorage}</span></div>
-</div>
-<div style="background:#fff;padding:16px;border-radius:6px;margin-bottom:12px">
-<div style="color:#666;margin-bottom:8px;font-weight:700">USER AGENT:</div>
-<div style="color:#999;font-size:11px;word-break:break-all">${info.userAgent}</div>
-</div>
-<div style="background:#e3f2fd;padding:12px;border-radius:6px;color:#1976d2;text-align:center">
-Running on local/debug environment<br>
-<strong>Enter a repo manually to scan</strong>
-</div>
-`;
-$('list').appendChild(debugDiv);
-setStatus(`🔧 Debug Mode • Local environment detected (${info.hostname})`,'info');
+    // default filename
+    a.download="plugin.na";
+    a.href=URL.createObjectURL(blob);
+    a.click();
 }
-
-// Set status message
-function setStatus(msg,type='info'){
-const s=$('status');
-s.textContent=msg;
-s.style.background=type==='error'?'rgba(255,107,107,.3)':type==='success'?'rgba(76,175,80,.3)':'rgba(255,255,255,.15)';
-}
-
-// Save to localStorage
-function save(data,repo,baseUrl){
-localStorage.setItem(LS_KEY,JSON.stringify(data));
-localStorage.setItem(LS_REPO,repo);
-if(baseUrl)localStorage.setItem(LS_BASE,baseUrl);
-}
-
-// Load from localStorage
-function load(){
-const data=localStorage.getItem(LS_KEY);
-const repo=localStorage.getItem(LS_REPO);
-const baseUrl=localStorage.getItem(LS_BASE);
-if(data&&repo){
-$('repoInput').value=repo;
-if(baseUrl)$('baseUrlInput').value=baseUrl;
-currentRepo=repo;
-$('repoLink').style.display='block';
-render(JSON.parse(data));
-setStatus(`Loaded ${JSON.parse(data).length} files (cached) • github.com/${repo}`,'success');
-return true;
-}
-return false;
-}
-
-// Clear data
-function clearData(){
-localStorage.removeItem(LS_KEY);
-localStorage.removeItem(LS_REPO);
-localStorage.removeItem(LS_BASE);
-$('repoInput').value='';
-$('baseUrlInput').value='';
-$('list').innerHTML='';
-$('empty').style.display='block';
-$('repoLink').style.display='none';
-currentRepo='';
-setStatus('Data cleared','success');
-}
-
-// Refresh current repo
-function refresh(){
-const repo=$('repoInput').value.trim();
-if(repo)scan();
-else autoDetect();
-}
-
-// Scan repository from GitHub
-async function scan(){
-const repo=$('repoInput').value.trim();
-if(!repo){
-setStatus('Please enter a repository (owner/repo)','error');
-return;
-}
-
-// Get custom base URL if provided
-const customBase=$('baseUrlInput').value.trim();
-if(customBase){
-localStorage.setItem(LS_BASE,customBase);
-}
-
-currentRepo=repo;
-$('repoLink').style.display='block';
-$('loading').style.display='flex';
-$('empty').style.display='none';
-$('list').innerHTML='';
-setStatus(`🔍 Scanning github.com/${repo}...`);
-
-try{
-const htmlFiles=await fetchRepoFiles(repo);
-if(htmlFiles.length===0){
-$('empty').style.display='block';
-$('empty').textContent='No HTML files found in this GitHub repository';
-setStatus(`github.com/${repo} • No HTML files found`,'error');
-}else{
-render(htmlFiles);
-const baseUrl=customBase||localStorage.getItem(LS_BASE)||`https://${repo.split('/')[0]}.github.io/${repo.split('/')[1]}`;
-save(htmlFiles,repo,baseUrl);
-setStatus(`✓ Scanned github.com/${repo} • Found ${htmlFiles.length} HTML files`,'success');
-}
-}catch(e){
-$('empty').style.display='block';
-$('empty').innerHTML=`<div class="error">Failed to scan github.com/${repo}<br>${e.message}</div>`;
-setStatus(`✗ Error scanning github.com/${repo}`,'error');
-}finally{
-$('loading').style.display='none';
-}
-}
-
-// Fetch files from GitHub API
-async function fetchRepoFiles(repo){
-const [owner,repoName]=repo.split('/');
-if(!owner||!repoName)throw new Error('Invalid format. Use: owner/repo');
-
-// Try main branch
-let apiUrl=`https://api.github.com/repos/${owner}/${repoName}/git/trees/main?recursive=1`;
-let res=await fetch(apiUrl);
-
-// Fallback to master branch
-if(!res.ok){
-apiUrl=`https://api.github.com/repos/${owner}/${repoName}/git/trees/master?recursive=1`;
-res=await fetch(apiUrl);
-if(!res.ok)throw new Error('Repository not found or not accessible');
-}
-
-const data=await res.json();
-return parseFiles(data.tree,owner,repoName);
-}
-
-// Parse and filter HTML files
-function parseFiles(tree,owner,repo){
-// Use stored base URL or construct default
-const baseUrl=localStorage.getItem(LS_BASE)||`https://${owner}.github.io/${repo}`;
-
-return tree
-.filter(f=>f.type==='blob'&&f.path.endsWith('.html'))
-.map(f=>({
-path:f.path,
-name:f.path.split('/').pop(),
-url:`${baseUrl}/${f.path}`,
-githubUrl:`https://github.com/${owner}/${repo}/blob/main/${f.path}`
-}))
-.sort((a,b)=>a.path.localeCompare(b.path));
-}
-
-// Render list
-function render(files){
-const list=$('list');
-list.innerHTML='';
-files.forEach((f,i)=>{
-const div=document.createElement('div');
-div.className='list-item';
-div.onclick=()=>window.open(f.url,'_blank');
-div.innerHTML=`
-<div class="list-item-icon">${i+1}</div>
-<div class="list-item-text">
-<div class="list-item-title">${f.name}</div>
-<div class="list-item-path">${f.path}</div>
-</div>
-`;
-list.appendChild(div);
-});
-$('empty').style.display='none';
-}
-
-// Init
-window.onload=()=>{
-if(!load()){
-// Try auto-detect on first load if on GitHub Pages
-if(window.location.hostname.includes('.github.io')){
-setTimeout(autoDetect,300);
-}
-}
-};
 </script>
+
 </body>
 </html>
